corrected alignment issue with down arrow

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -184,7 +184,7 @@ a:visited {
 .arrow:before {
   z-index: 899;
   position: absolute;
-  left: 50px;
+  left: 51px;
 }
 
 .arrow {
@@ -206,7 +206,7 @@ a:visited {
   width: 20px;
   height: 20px;
   top: 30%;
-  left: 50%;
+  left: 53%;
   margin: 0 0 0 -9px;
   border-left: none;
   border-top: none;
